@@ -5,31 +5,29 @@ GTK : Fix 100% CPU usage when waiting for results
 
 wxbMainFrame : Add some text in front of the command window such as 
    "Command: " so that the user knows he can type into the 
-   command window (or command line)
+   command line
    
-wxbRestorePanel : Select the first client when clicked on start button.
-
 wxbRestorePanel : Reconsider start button's labels.
 
 general : Show nice messages when errors occurs.
 
-wxbMainFrame : use more often status text
+wxbMainFrame : set focus to type control when clicking on console
 
 wxbRestorePanel : Add a Cancel Restore button
    (may need to implement BNET_BREAK to break current command)
 
-wxbRestorePanel : However, if one double clicks on a directory X in the left 
-     "tree" window when the directory is not yet open, instead of 
-     selecting the directory and everything below, it opens the 
-     directory and nothing is selected.
-     
-wxbRestorePanel : abort restore if there's no client.
-
 general : Allow the user to quit however the state is (kill thread if necessary)
 
 VC++ : crashing when there's no configuration file, or server is unreachable
+       (on every error ?)
 
 [postponed to July:]
+
+wxbMainFrame : use more often status text
+
+wxbRestorePanel : Ask Kern for a dot command which gives restore
+  dates for a client (with an interval, last 20 for example, or last
+  40 excluding last 20).
 
 wxbRestorePanel : Add buttons to mark/unmark directories/files.
 
@@ -54,6 +52,9 @@ wxbRestorePanel : Use ".default job=RestoreFiles" to get defaults parameters
 	when changing a restore parameter fails.
 
 console_thread : Allow the user to choose his config file.
+
+console_thread : Allow the user to choose his director when there's multiple
+    directors.
 
 wxbDataParser : Add a boolean in the constructor to avoid storing data is 
     will not be used.
